--- a/Info.html
+++ b/Info.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rwoIxC3A6nJmAzKK5r+L1T+rZz5+5ghvNTR7Ca2bTdM/xutvlph1v8FR6joC5rLt" crossorigin="anonymous">
 
-  <title>Responzivní web</title>
+  <title>Art web</title>
   <link href="./bootstrap/css/bootstrap.css" rel="stylesheet">
   <link href="./icons/bootstrap-icons.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
@@ -90,7 +90,7 @@
             <h5>Sociální sítě:</h5>
           <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.facebook.com"
               role="button" data-mdb-ripple-color="dark"><i class="fab fa-facebook-f"></i></a>
-          <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.instagram.com/akiart1/"
+          <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.instagram.com"
               role="button" data-mdb-ripple-color="dark"><i class="fab fa-instagram"></i></a>
           </section>
       </div>
